--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <div class="col-8" id="weather-report">
       <div class="row" id="current-weather">
         <h2 id="current-city"></h2>
-        <p id="current-temp">Temp: <span></span></p>
-        <p id="current-wind" >Wind: <span></span></p>
-        <p id="current-humidity">Humidity: <span></span></p>
-        <p id="current-uv">UV Index: <span></span></p>
+        <p>Temp: <span id="current-temp"></span></p>
+        <p>Wind: <span id="current-wind" ></span></p>
+        <p>Humidity: <span id="current-humidity"></span></p>
+        <p >UV Index: <span id="current-uv"></span></p>
       </div>
       <div class="row" id="forecast-5-day">
         <h3>5-Day Forecast</h3>
