adds function to populate forecasted weather data

--- a/index.html
+++ b/index.html
@@ -31,30 +31,45 @@
       <div class="row" id="current-weather">
         <h2 id="current-city"></h2>
         <p>Temp: <span id="current-temp"></span></p>
-        <p>Wind: <span id="current-wind" ></span></p>
+        <p>Wind: <span id="current-wind"></span></p>
         <p>Humidity: <span id="current-humidity"></span></p>
-        <p >UV Index: <span id="current-uv"></span></p>
+        <p>UV Index: <span id="current-uv"></span></p>
       </div>
       <div class="row" id="forecast-5-day">
         <h3>5-Day Forecast</h3>
         <div id="forecast-5-day-cards" class="row d-flex justify-content-between">
           <div class="card-5-day" id="day-1">
-
+            <h2 id="forecast-date-1"></h2>
+            <p>Temp: <span id="forecast-temp-1"></span></p>
+            <p>Wind: <span id="forecast-wind-1"></span></p>
+            <p>Humidity: <span id="forecast-humidity-1"></span></p>
           </div>
           <div class="card-5-day" id="day-2">
-  
+            <h2 id="forecast-date-2"></h2>
+            <p>Temp: <span id="forecast-temp-2"></span></p>
+            <p>Wind: <span id="forecast-wind-2"></span></p>
+            <p>Humidity: <span id="forecast-humidity-2"></span></p>
           </div>
           <div class="card-5-day" id="day-3">
-  
+            <h2 id="forecast-date-3"></h2>
+            <p>Temp: <span id="forecast-temp-3"></span></p>
+            <p>Wind: <span id="forecast-wind-3"></span></p>
+            <p>Humidity: <span id="forecast-humidity-3"></span></p>
           </div>
           <div class="card-5-day" id="day-4">
-  
+            <h2 id="forecast-date-4"></h2>
+            <p>Temp: <span id="forecast-temp-4"></span></p>
+            <p>Wind: <span id="forecast-wind-4"></span></p>
+            <p>Humidity: <span id="forecast-humidity-4"></span></p>
           </div>
           <div class="card-5-day" id="day-5">
-  
+            <h2 id="forecast-date-5"></h2>
+            <p>Temp: <span id="forecast-temp-5"></span></p>
+            <p>Wind: <span id="forecast-wind-5"></span></p>
+            <p>Humidity: <span id="forecast-humidity-5"></span></p>
           </div>
         </div>
-    
+
       </div>
     </div>
 
