--- a/index.html
+++ b/index.html
@@ -10,36 +10,37 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Weather Dashboard</title>
 </head>
 
 <body>
-  <header class="d-flex justify-content-center">
+  <header class="d-flex justify-content-center text-">
     <h1 class="display-3">Weather Dashboard</h1>
   </header>
 
-  <div class="container row">
+  <div class="container d-flex">
     <!-- Timeblocks go here -->
     <div class="col-4" id="search-city">
-      <h2>Search for a city:</h2>
-      <form id="search-form" class="card-body">
+      <h2 class="">Search for a city</h2>
+      <form id="search-form" class="card-body pt-0 pl-0">
         <input name="search-box" id="search-box" type="text" autofocus="true" class="form-input">
         <button id="search-button" type="button" class="btn">Search</button>
       </form>
     </div>
     <div class="col-8" id="weather-report">
-      <div class="row" id="current-weather">
+      <div class="row mb-5" id="current-weather">
         <h2 id="current-city"></h2>
         <p>Temp: <span id="current-temp"></span></p>
         <p>Wind: <span id="current-wind"></span></p>
         <p>Humidity: <span id="current-humidity"></span></p>
         <p>UV Index: <span id="current-uv"></span></p>
       </div>
-      <div class="row" id="forecast-5-day">
-        <h3>5-Day Forecast</h3>
+      <div class="" id="forecast-5-day">
+        <h3 class="pb-3">5-Day Forecast</h3>
         <div id="forecast-5-day-cards" class="row d-flex justify-content-between">
           <div class="card-5-day" id="day-1">
-            <h2 id="forecast-date-1"></h2>
+            <h4 id="forecast-date-1"></h4>
             <p>Temp: <span id="forecast-temp-1"></span></p>
             <p>Wind: <span id="forecast-wind-1"></span></p>
             <p>Humidity: <span id="forecast-humidity-1"></span></p>
