--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Weather Dashboard</title>
 </head>
 
@@ -21,16 +21,25 @@
 
   <div class="container d-flex">
     <!-- Timeblocks go here -->
-    <div class="col-4" id="search-city">
-      <h2 class="">Search for a city</h2>
-      <form id="search-form" class="card-body pt-0 pl-0">
-        <input name="search-box" id="search-box" type="text" autofocus="true" class="form-input">
-        <button id="search-button" type="button" class="btn">Search</button>
-      </form>
+    <div class="col-4" id="searches">
+      <div id="search-city">
+        <form id="search-form" class="card-body pt-0 pl-0">
+          <h2 class="">Search for a city</h2>
+          <input name="search-box" id="search-box" type="text" autofocus="true" class="form-input">
+          <button id="search-button" type="button" class="btn">Search</button>
+        </form>
+      </div>
+      <hr>
+      <div id="search-history">
+
+      </div>
+      
     </div>
+
     <div class="col-8" id="weather-report">
       <div class="row mb-5" id="current-weather">
         <h2 id="current-city"></h2>
+        <img id="current-icon">
         <p>Temp: <span id="current-temp"></span></p>
         <p>Wind: <span id="current-wind"></span></p>
         <p>Humidity: <span id="current-humidity"></span></p>
@@ -41,30 +50,35 @@
         <div id="forecast-5-day-cards" class="row d-flex justify-content-between">
           <div class="card-5-day" id="day-1">
             <h4 id="forecast-date-1"></h4>
+            <img id="forecast-icon-1">
             <p>Temp: <span id="forecast-temp-1"></span></p>
             <p>Wind: <span id="forecast-wind-1"></span></p>
             <p>Humidity: <span id="forecast-humidity-1"></span></p>
           </div>
           <div class="card-5-day" id="day-2">
             <h2 id="forecast-date-2"></h2>
+            <img id="forecast-icon-2">
             <p>Temp: <span id="forecast-temp-2"></span></p>
             <p>Wind: <span id="forecast-wind-2"></span></p>
             <p>Humidity: <span id="forecast-humidity-2"></span></p>
           </div>
           <div class="card-5-day" id="day-3">
             <h2 id="forecast-date-3"></h2>
+            <img id="forecast-icon-3">
             <p>Temp: <span id="forecast-temp-3"></span></p>
             <p>Wind: <span id="forecast-wind-3"></span></p>
             <p>Humidity: <span id="forecast-humidity-3"></span></p>
           </div>
           <div class="card-5-day" id="day-4">
             <h2 id="forecast-date-4"></h2>
+            <img id="forecast-icon-4">
             <p>Temp: <span id="forecast-temp-4"></span></p>
             <p>Wind: <span id="forecast-wind-4"></span></p>
             <p>Humidity: <span id="forecast-humidity-4"></span></p>
           </div>
           <div class="card-5-day" id="day-5">
             <h2 id="forecast-date-5"></h2>
+            <img id="forecast-icon-5">
             <p>Temp: <span id="forecast-temp-5"></span></p>
             <p>Wind: <span id="forecast-wind-5"></span></p>
             <p>Humidity: <span id="forecast-humidity-5"></span></p>
