--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Weather Dashboard</title>
 </head>
@@ -22,7 +23,7 @@
   <div class="container d-flex flex-wrap">
     <!-- Timeblocks go here -->
     <div class="col-xs-12 col-md-4 pr-5 " id="searches">
-      <div id="search-city"  class="w-100">
+      <div id="search-city" class="w-100">
         <form id="search-form" class="card-body pt-0 pl-0 pr-0">
           <h2 class="">Search for city</h2>
           <input name="search-box" id="search-box" type="text" autofocus="true" class="form-input">
@@ -37,7 +38,10 @@
     <div class="col-xs-12 col-md-8" id="weather-report">
 
       <div class="row mb-5" id="current-weather">
-        <h2 id="current-city"></h2>
+        <h2>
+          <span id="current-city"></span>
+          <span id="current-date"></span>
+        </h2>
         <img id="current-icon" class="icon">
         <p>Temp: <span id="current-temp"></span></p>
         <p>Wind: <span id="current-wind"></span></p>
